# databricks-iot

./: .gitignore  Makefile  README.md  config.yaml  databricks.yml  main.py  pyproject.toml  run_generator.py  validate_data_coherence.py
.github/: deploy.yml
.github/workflows/: deploy.yml
infrastructure/terraform/: README.md  main.tf  providers.tf  variables.tf
infrastructure/terraform/modules/azure/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/databricks/: main.tf  outputs.tf  providers.tf  variables.tf
notebooks/: eda.ipynb
output/: device_master.json  failures.json  maintenance.json
resources/: databricks_predictive_maintenance.pipeline.yml  lakehouse_pipeline.yml  model_deployment.yml  model_inference.yml
src/data_simulation/: azure_uploader.py  config.py  iot_data_generator.py
src/lakehouse/bronze/: bronze_ingestion.py
src/lakehouse/gold/: gold_features.py
src/lakehouse/models/: deployment.py  inference.py  training.py
src/lakehouse/silver/: silver_cleansing.py
src/sample_data/: device_master.json  failures.json  maintenance.json  telemetry.json
tests/: __init__.py  conftest.py  test_config.py  test_config.yaml  test_iot_data_generator.py
